--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "@material-ui/icons": "^4.11.2",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
     "eslint": "^7.29.0",
